--- a/front/ex1/style.css
+++ b/front/ex1/style.css
@@ -1,9 +1,12 @@
-body {
-    background: #CCCCCC;
-}
+
 
 #banner {
     width: 100%;
+}
+
+.principal {
+    background-color: #CCCCCC;
+    padding: 30px;
 }
 
 h1 {
@@ -20,4 +23,30 @@ p {
 
 em strong {
     color: red;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.beneficios {
+    background-color: #FFFFFF;
+    padding: 20px;
+}
+
+
+h2 {
+    text-align: center;
+}
+
+
+ul {
+    display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+
+.imagemBeneficios {
+    width: 50%;
 }
