--- a/front/ex1/style.css
+++ b/front/ex1/style.css
@@ -9,7 +9,11 @@
     padding: 30px;
 }
 
-h1 {
+.titulo-principal {
+    padding-left: 20px;
+}
+
+.titulo-centralizado {
     text-align: center;
 }
 
@@ -32,11 +36,6 @@ em strong {
 .beneficios {
     background-color: #FFFFFF;
     padding: 20px;
-}
-
-
-h2 {
-    text-align: center;
 }
 
 
