--- a/style.css
+++ b/style.css
@@ -94,10 +94,6 @@ footer {
 	margin: 20px 0 0;
 }
 
-main {
-
-}
-
 form {
 	margin: 40px 0;
 }
@@ -165,6 +161,8 @@ td, th {
 	clear: left;
 }
 
+
+
 .principal {
 	padding: 3em 0;
 	background: #FEFEFE;
@@ -225,16 +223,45 @@ td, th {
 	line-height: 1.5;
 }
 
+.itens::before {
+	content: "★ ";
+}
+
 .itens:first-child {
 	font-weight: bold;
 }
 
 .imagem-beneficios {
 	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 50px 10px #000000;
 }
 
+.imagem-beneficios:hover {
+	width: 60%;
+	opacity: 0.3;
+}
 
 .video {
 	width: 560px;
 	margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+		width:auto;
+	}
+
+	.caixa > h1 {
+		text-align: center;
+	}
+
+	.caixa > nav {
+		position: static;
+	}
+
+	.imagem-beneficios, .lista-beneficios {
+		width: 100%;
+	}
 }
